refactor(assembly): 优化MetaAssemblyCompiler和MetaAssemblyEngine代码结构
- 移除不必要的空值检查，简化条件判断逻辑
- 将多个if-else语句替换为switch表达式以提高可读性
- 优化变量声明和初始化，减少冗余代码
- 修复parsePoint方法的默认参数处理逻辑
- 调整路由算法中的参数计算方式
- 优化集合操作使用新的Java API方法
- 简化数学计算和条件表达式
- 移除过时的代码注释和无用变量